<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hospital</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="closeDay">Close Day:</string>
    <string name="openTime">Open Time:</string>
    <string name="description">Description:</string>
    <string name="enter_name">name</string>
    <string name="enter_address">address</string>
    <string name="enter_latitude">latitude</string>
    <string name="enter_longitude">longitude</string>
    <string name="enter_closeDay">close day</string>
    <string name="enter_openTime">daily open time</string>
    <string name="enter_description">service description</string>
    <string name="btnSave">Save</string>
    <string name="addHospital">Add Hospital</string>
    <string name="cameramanu">Camera</string>
    <string name="show_map">Show Map</string>
    <string name="show_header">Show Hospital Information</string>
    <string name="insert_header">Insert Hospital Information</string>
    <string name="camera_delete">Delete Image</string>
    <string name="camera_add">Add Image</string>
    
    
   
</resources>
