<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/insert">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    >

    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:text="@string/show_header"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/viewName"
            android:layout_width="0dp"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:ems="10"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:layout_marginLeft="20dp"
            android:textColor="#000000"
            android:text="@string/address" />

        <TextView
            android:id="@+id/viewAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_weight="0.65"
            android:ems="10"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:layout_marginLeft="20dp"
            android:textColor="#000000"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/viewLatitude"
            android:layout_width="0dp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:ems="10"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:text="@string/longitude" />

        <TextView
            android:id="@+id/viewLongitude"
            android:layout_width="0dp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:ems="10"
           
            />
    </LinearLayout>

    

    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/viewServiceDescription"
            android:layout_width="0dp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:ems="10"
           />
    </LinearLayout>

 

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_custom"
            android:onClick="viewMap"
            android:text="@string/show_map"
            android:textColor="#ffffff" 
            />
    
</LinearLayout>
</ScrollView>